# portfolio-backtesting-framework

./: .gitignore  Portfolio_Backtesting_UI.ipynb  README.md  pyproject.toml  requirements.txt
configs/: default_config.json
notebook/: Portfolio_Backtesting_UI.ipynb
notebooks/: Portfolio_Backtesting_Framework.ipynb
src/portfolio_backtester/: __init__.py  adapters.py  config.py  dashboard.py  data.py  engine.py  features.py  metrics.py  strategies.py  visualization.py
tests/: test_engine.py  test_metrics.py
